[package]
name = "tmpshare"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
description = "A tool to share files"

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/tmpshare"
repository = "https://github.com/zoranzaric/tmpshare.git"

[dependencies]
checksums = "0.5.5"
chrono = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"