[package]
name = "tmpshare"
version = "1.0.1"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
description = "A tool to share files"

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/tmpshare"
repository = "https://github.com/zoranzaric/tmpshare.git"

[dependencies]
checksums = "0.5.5"
uuid = { version = "0.6", features = ["v4"] }
chrono = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
rocket = "0.3.7"
rocket_codegen = "0.3.7"
glob = "0.2"
upspin = "0.0.1-pre"
tempfile = "3.0.0"
failure = "0.1.1"